--- a/test-app/src/app/components/review-list/review-list.component.scss
+++ b/test-app/src/app/components/review-list/review-list.component.scss
@@ -103,6 +103,7 @@
 
 .save-button {
     background-color:#3dc37d !important;
+    color: white;
     margin: 5px;
     border: none;
     border-radius: 50%;
@@ -120,6 +121,7 @@
 
 .cancel-button {
     background-color:#ec5699 !important;
+    color: white;
     margin: 5px;
     border: none;
     border-radius: 50%;
@@ -284,6 +286,7 @@
             box-shadow: 0 2px 3px -1px #25252505,0 2px 4px -1px #0000000f;
             // padding-left: 15px;
             padding-top: 5px;
+            color: #3d3d3d !important;
             padding-bottom: 5px;
         }
         
@@ -297,17 +300,18 @@
             width: 100%;
             margin: 0;
             text-align: center;
+            color: #3d3d3d !important;
         }
 
         select {
-            
+            color: #3d3d3d;
 
             width: 80%;
             text-align: center;
             margin: 10px;
             border-radius: 10px;
             border: 1px solid #ececee;
-            background-color: #424242;
+            // background-color: #424242;
             box-shadow: 0 2px 3px -1px #25252505,0 2px 4px -1px #0000000f;
             padding-left: 15px;
             padding-top: 5px;
