#16 - Localization, Two Pagination in Work, Langs

--- a/test-app/src/app/components/account/account.component.html
+++ b/test-app/src/app/components/account/account.component.html
@@ -12,7 +12,7 @@
      <div class="chart">
           <app-chart></app-chart>
      </div>
-     <h1 *ngIf="isAdmin" style="text-align: center; font-weight: 900; margin: 30px;">Admin Dashboard</h1>
+     <!-- <h1 *ngIf="isAdmin" style="text-align: center; font-weight: 900; margin: 30px;">Admin Dashboard</h1>
      <div *ngIf="isAdmin" >
           <app-users-list></app-users-list>
      </div>
@@ -21,7 +21,7 @@
      </div>
      <div *ngIf="isAdmin" style="margin: 40px;">
           <app-texts-list></app-texts-list>
-     </div>
+     </div> -->
 </div>
 
 
