--- a/test-app/src/app/components/main/keyboard/keyboard.component.html
+++ b/test-app/src/app/components/main/keyboard/keyboard.component.html
@@ -112,7 +112,7 @@
                 <div id="key-44">M</div>
                 <div id="key-45">,<sup><</sup></div>
                 <div id="key-46">.<sup>></sup></div>
-                <div id="letter_dot">. <sup>?</sup></div>
+                <div id="key-47">/ <sup>?</sup></div>
                 <div class="shift" id="letter_shift-2-1">Shift</div>
                 <img src="https://typostorage.blob.core.windows.net/avatars/little-finger-left-purple.svg" class="hand hidden" id="little-finger-left-purple-5" >
                 <img src="https://typostorage.blob.core.windows.net/avatars/ring-finger-left-lilac.svg" class="hand hidden" id="ring-finger-left-lilac-4" >
