--- a/test-app/src/app/components/main/main.component.html
+++ b/test-app/src/app/components/main/main.component.html
@@ -70,7 +70,7 @@
                     </small>
                 </div>
                 </mat-form-field>
-                <button mat-raised-button [disabled]="!reviewForm.valid" disabled class="review-button">Send &#10132;</button>
+                <button mat-raised-button [disabled]="!reviewForm.valid" disabled class="review-button" #buttonText>&#10132;</button>
             </div>
         </form>        
     </div>
