--- a/test-app/src/app/components/main-header/dialog/dialog.component.html
+++ b/test-app/src/app/components/main-header/dialog/dialog.component.html
@@ -4,6 +4,13 @@
     <a href="" [mat-dialog-close]="true" [routerLink]="['/typo/main']" class="menu-item">Main</a>
     <a href="" [mat-dialog-close]="true" [routerLink]="['/typo/account']" class="menu-item">Dashboard</a>
     <a href="" [mat-dialog-close]="true" [routerLink]="['/typo/leaderboard']" class="menu-item">Leaderboard</a>
+    <a href="" [mat-dialog-close]="true" [routerLink]="['/typo/adminpanel']" class="menu-item" *ngIf="isAdmin">Admin Panel</a>
+    <div class="lang-container">
+        <a href="" [mat-dialog-close]="true" class="lang" (click)="setLanguage('Russian')">RU</a>
+        <a href="" [mat-dialog-close]="true" class="lang" (click)="setLanguage('English')">EN</a>
+        <a href="" [mat-dialog-close]="true" class="lang" (click)="setLanguage('Romanian')">RO</a>
+    </div>
+    
     <a href="" [mat-dialog-close]="true" (click)="signOut()" class="menu-item sign-out">Sign Out</a>
 </div>
 
@@ -17,6 +24,33 @@
         justify-content: center;
         background-color: white;
         color: #3d3d3d
+    }
+
+    .lang-container {
+        width: 40%;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: space-between;
+        background-color: white;
+        color: #3d3d3d
+    }
+
+    .lang {
+        /* width: 33% !important; */
+        width: 100%;
+        text-align: center;
+        padding-top: 10px;
+        padding-bottom: 10px;
+        font-size: 16px;
+        cursor: pointer;
+        color: #3d3d3d;
+        font-weight: 500;
+        transition: background 0.25s;
+    }
+
+    .lang:hover {
+        background: rgba(0, 0, 0, 0.11);
     }
 
     a {
