--- a/test-app/src/app/components/main-header/main-header.component.scss
+++ b/test-app/src/app/components/main-header/main-header.component.scss
@@ -74,7 +74,7 @@ a {
 #logo {
     padding: 15px;
     margin-top: 20px;
-    
+    font-weight: 900 !important;
     text-align: center;
     color: #3d3d3d;
     font-weight: 700;
