--- a/test-app/src/app/components/texts-list/texts-list.component.scss
+++ b/test-app/src/app/components/texts-list/texts-list.component.scss
@@ -149,7 +149,7 @@
         width: 100%;
         background-color: white !important;
         color: #3d3d3d !important;
-        font-weight: 700 !important;
+        font-weight: 400 !important;
         border: none;
     }
 
@@ -340,7 +340,8 @@
 
 .mat-card {
     border-radius: 10px;
-    border: 1px solid #c7d0d4;
+    // border: 1px solid #c7d0d4;
+    border: 1px solid #4e4e4e;
     box-shadow: 2px 2px 20px rgba(126, 126, 126, 0.07);
     background-color: white;
 }
