--- a/test-app/src/app/components/main-footer/main-footer.component.html
+++ b/test-app/src/app/components/main-footer/main-footer.component.html
@@ -1,4 +1,4 @@
 <div class="divider"></div>
 <footer>
-   <span class="footer-content">@ 2022 Dimitris Kidis, Inc.</span>
+   <span class="footer-content">@ All Right Reservedd, 2024.</span>
 </footer>
